[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pru"
description = "Update and resolve requirements.txt based on the Python environment and pip used."
readme = "README.md"
requires-python = ">=3.7.1"
keywords = []
authors = [
  {name = "Muhammad Yasirroni", email = "muhammadyasirroni@gmail.com"},
]
maintainers = [
  {name = "Muhammad Yasirroni", email = "muhammadyasirroni@gmail.com"}
]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = []
dynamic = ["version"]

[project.scripts]
pru = "pru.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=7.2.0",
  "pytest-cov>=4.1.0",
  "pytest-xdist>=3.1.0",
  "pre-commit>=2.21.0",
  "ruff>=0.0.254",
  "setuptools>=68.0.0",
  "pytest-cov>=4.1.0",
  "pytest-dependency>=0.5.1",
]

[project.urls]
Documentation = "https://github.com/yasirroni/pru#readme"
Issues = "https://github.com/yasirroni/pru/issues"
Source = "https://github.com/yasirroni/pru"

[tool.ruff]
fix = true
line-length = 88
lint.select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
